# colcon-ansi-colors-example

./: README.rst  setup.cfg  stdeb.cfg
colcon_ansi_colors_example/output_style/: catkin_tools.py
test/: spell_check.words  test_flake8.py  test_spell_check.py
