[metadata]
name = colcon-ansi-colors-example
version = attr: colcon_ansi_colors_example.__version__
url = https://colcon.readthedocs.io
project_urls =
  Changelog = https://github.com/colcon/colcon-ansi-colors-example/milestones?direction=desc&sort=due_date&state=closed
  GitHub = https://github.com/colcon/colcon-ansi-colors-example/
author = Scott K Logan
author_email = logans@cottsay.net
classifiers =
  Development Status :: 3 - Alpha
  Environment :: Plugins
  Intended Audience :: Developers
  Operating System :: MacOS
  Operating System :: POSIX
  Programming Language :: Python
  Topic :: Software Development :: Build Tools
license = Apache-2.0
description = Extension for colcon to colorize output using ANSI.
long_description = file: README.rst
keywords = colcon

[options]
python_requires = >=3.6
install_requires =
  colcon-core >= 0.19.0
packages = find:
zip_safe = true

[options.extras_require]
test =
  flake8>=3.6.0,<6
  flake8-blind-except
  flake8-builtins
  flake8-class-newline
  flake8-comprehensions
  flake8-deprecated
  flake8-docstrings
  flake8-import-order
  flake8-quotes
  pep8-naming
  pylint
  pytest
  pytest-cov
  scspell3k>=2.2

[tool:pytest]
junit_suite_name = colcon-ansi-colors-example
markers =
  flake8
  linter

[options.entry_points]
colcon_core.output_style =
  catkin_tools = colcon_ansi_colors_example.output_style.catkin_tools:CatkinToolsOutputStyle

[flake8]
import-order-style = google

[coverage:run]
source = colcon_ansi_colors_example
